Moving to JDK 25